Adjusted Text properties

--- a/docs/docs/cmd/spo/contenttype/contenttype-field-list.mdx
+++ b/docs/docs/cmd/spo/contenttype/contenttype-field-list.mdx
@@ -109,9 +109,9 @@ m365 spo contenttype field list --webUrl https://contoso.sharepoint.com/sites/co
   <TabItem value="Text">
 
   ```text
-  Id                                    Title   Group    Hidden
-  ------------------------------------  ------  -------  ------
-  5ee2dd25-d941-455a-9bdb-7f2c54aed11b  Title   _Hidden  false
+  Id                                    Title   InternalName  Hidden
+  ------------------------------------  ------  ------------  ------
+  5ee2dd25-d941-455a-9bdb-7f2c54aed11b  Title   Title         false
   ```
 
   </TabItem>
