--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -6,6 +6,16 @@ sidebar_position: 3
 
 ## v8.0.0 (beta)
 
+### New commands 
+
+**SharePoint:**
+
+- [spo contenttype field list](../cmd/spo/contenttype/contenttype-field-list) - lists fields for a given site or list content type [#5677](https://github.com/pnp/cli-microsoft365/issues/5677)
+
+**Teams:**
+
+- [teams meeting attendancereport get](../cmd/teams/meeting/meeting-attendancereport-get) - gets attendance report for a given meeting [#3909](https://github.com/pnp/cli-microsoft365/issues/3909)
+
 ### Changes
 
 - added eslint rule to handle promises [#6005](https://github.com/pnp/cli-microsoft365/issues/6005)
@@ -16,12 +26,16 @@ sidebar_position: 3
 - updated [flow list](../cmd/flow/flow-list.mdx) as admin to use v2 endpoint [#6096](https://github.com/pnp/cli-microsoft365/issues/6096)
 - fixed [spo group member add](../cmd/spo/group/group-member-add.mdx) command output [#6104](https://github.com/pnp/cli-microsoft365/issues/6104)
 - fixed sample scripts for v8
+- added project parsing errors [#5927](https://github.com/pnp/cli-microsoft365/issues/5927)
+- added support for Node 22 [#6003](https://github.com/pnp/cli-microsoft365/issues/6003)
+- added new sample script 'Setup CI/CD workflow [#5799](https://github.com/pnp/cli-microsoft365/issues/5799)
+- fixed Azure Cloud Shell usage [#6117](https://github.com/pnp/cli-microsoft365/issues/6117)
 
 ## [v7.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.10.0)
 
 ### New commands
 
-**Entra ID**
+**Entra ID:**
 
 - [entra pim role assignment eligibility list](../cmd/entra/pim/pim-role-assignment-eligibility-list.mdx) - retrieves a list of eligible roles a user or group can be assigned to [#5783](https://github.com/pnp/cli-microsoft365/issues/5783)
 - [entra pim role request list](../cmd/entra/pim/pim-role-request-list.mdx) - retrieves a list of PIM requests for roles [#5781](https://github.com/pnp/cli-microsoft365/issues/5781)
