--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -522,6 +522,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'NanddeepNachan'
   },
   {
+    name: 'Nello D\'Andrea',
+    company: 'Die Mobiliar',
+    github: 'ferrarirosso',
+    x: 'NelloDAndrea'
+  },
+  {
     name: 'Nicholas Honen',
     company: '',
     github: 'nickhonen',
