--- a/docs/docs/sample-scripts/spo/add-ci-cd-pipeline/index.mdx
+++ b/docs/docs/sample-scripts/spo/add-ci-cd-pipeline/index.mdx
@@ -11,6 +11,8 @@ import TabItem from '@theme/TabItem';
 
 # Add CI/CD Pipeline for your SharePoint Framework project
 
+Author: [Adam Wójcik](https://github.com/Adam-it)
+
 Having a flow that builds and ships your project on push to your repository's main branch is a great practice that allows you to share your latest changes with your team, testers or customers. 
 This may save you a lot of time and effort, as you don't need to manually build and deploy your project every time you make a change.
 This script will help you to create a CI/CD pipeline for your SharePoint Framework project. 
