--- a/docs/docs/cmd/viva/engage/engage-community-add.mdx
+++ b/docs/docs/cmd/viva/engage/engage-community-add.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # viva engage community add
 
-Creates a new community in Viva Engage.
+Creates a new community in Viva Engage
 
 ## Usage
 
