Updates options of 'entra enterpriseapp' commands. Closes #6155

--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -37,6 +37,35 @@ We updated option naming from `groupDisplayName` to `groupName` and `userPrincip
 
 Please, check the documentation of the affected commands to see the updated option naming and adjust your scripts accordingly.
 
+### Aligns options of `entra enterpriseapp` commands
+
+For this new major version, we've aligned the options of the `entra enterpriseapp` commands as follows: 
+
+[entra enterpriseapp add](https://pnp.github.io/cli-microsoft365/cmd/entra/enterpriseapp/enterpriseapp-add)
+
+| Old option | New option |
+|---------------|---------------|
+| --appId [appId] | -i, --id [id] |
+| --appName [appName] | -n, --displayName [displayName] |
+
+[entra enterpriseapp get](https://pnp.github.io/cli-microsoft365/cmd/entra/enterpriseapp/enterpriseapp-get)
+
+| Old option | New option |
+|---------------|---------------|
+| -i, --appId [appId] | -i, --id [id] |
+| -n, --appDisplayName [appDisplayName] | -n, --displayName [displayName] |
+| --appObjectId [appObjectId] | --objectId [objectId] |
+
+[entra enterpriseapp list](https://pnp.github.io/cli-microsoft365/cmd/entra/enterpriseapp/enterpriseapp-list)
+
+| Old option | New option |
+|---------------|---------------|
+| --displayName [displayName] | -n, --displayName [displayName] |
+
+#### What action do I need to take?
+
+Please, check the documentation of the [entra enterpriseapp add](./cmd/entra/enterpriseapp/enterpriseapp-add), [entra enterpriseapp get](./cmd/entra/enterpriseapp/enterpriseapp-get), and [entra enterpriseapp list](./cmd/entra/enterpriseapp/enterpriseapp-list) commands to see the updated options and adjust your scripts accordingly.
+
 ## SharePoint
 
 ### Updated `spo site appcatalog remove` options
