Removed yammer command aliases. Closes #5764

--- a/docs/docs/cmd/cli/cli-consent.mdx
+++ b/docs/docs/cmd/cli/cli-consent.mdx
@@ -16,7 +16,7 @@ m365 cli consent [options]
 
 ```md definition-list
 `-s, --service <service>`
-: Service for which to consent permissions. Allowed values: `VivaEngage`, (deprecated)`yammer`.
+: Service for which to consent permissions. Allowed values: `VivaEngage`.
 ```
 
 <Global />
