--- a/docs/docs/cmd/spo/folder/folder-retentionlabel-ensure.mdx
+++ b/docs/docs/cmd/spo/folder/folder-retentionlabel-ensure.mdx
@@ -19,7 +19,7 @@ m365 spo folder retentionlabel ensure [options]
 `--folderUrl [folderUrl]`
 : The server- or site-relative decoded URL of the folder that should be labelled. Specify either `folderUrl` or `folderId` but not both.
 
-`i, --folderId [folderId]`
+`-i, --folderId [folderId]`
 : The UniqueId (GUID) of the folder that should be labelled. Specify either `folderUrl` or `folderId` but not both.
 
 `--name <name>`
@@ -30,7 +30,7 @@ m365 spo folder retentionlabel ensure [options]
 
 ## Remarks
 
-You can also use [spo listitem retentionlabel remove](./../../../cmd/spo/listitem/listitem-retentionlabel-remove.mdx) for removing the retention label from a listitem.
+You can also use [spo listitem retentionlabel remove](./../../../cmd/spo/listitem/listitem-retentionlabel-remove.mdx) for removing the retention label from a list item.
 
 ## Examples
 
