--- a/docs/docs/cmd/spo/site/site-recyclebinitem-list.mdx
+++ b/docs/docs/cmd/spo/site/site-recyclebinitem-list.mdx
@@ -19,7 +19,7 @@ m365 spo site recyclebinitem list [options]
 : URL of the site for which to retrieve the recycle bin items
 
 `--type [type]`
-: Type of items which should be retrieved (listItems, folders, files)
+: Type of items which should be retrieved. Valid values: `listItems`, `folders`, `files`.
 
 `--secondary`
 : Use this switch to retrieve items from secondary recycle bin
