--- a/docs/docs/cmd/spo/file/file-roleassignment-add.mdx
+++ b/docs/docs/cmd/spo/file/file-roleassignment-add.mdx
@@ -19,7 +19,7 @@ m365 spo file roleassignment add [options]
 `--fileUrl [fileUrl]`
 : The server- or site-relative decoded URL of the file to retrieve. Specify either `fileUrl` or `fileId` but not both.
 
-`i, --fileId [fileId]`
+`-i, --fileId [fileId]`
 : The UniqueId (GUID) of the file to retrieve. Specify either `fileUrl` or `fileId` but not both.
 
 `--principalId [principalId]`
