--- a/docs/docs/cmd/spo/file/file-roleinheritance-break.mdx
+++ b/docs/docs/cmd/spo/file/file-roleinheritance-break.mdx
@@ -19,7 +19,7 @@ m365 spo file roleinheritance break [options]
 `--fileUrl [fileUrl]`
 : The server- or site-relative decoded URL of the file. Specify either `fileUrl` or `fileId` but not both.
 
-`i, --fileId [fileId]`
+`-i, --fileId [fileId]`
 : The UniqueId (GUID) of the file. Specify either `fileUrl` or `fileId` but not both.
 
 `-c, --clearExistingPermissions`
