--- a/docs/docs/cmd/spo/listitem/listitem-retentionlabel-ensure.mdx
+++ b/docs/docs/cmd/spo/listitem/listitem-retentionlabel-ensure.mdx
@@ -14,19 +14,19 @@ m365 spo listitem retentionlabel ensure [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: URL of the site where the retentionlabel from a listitem to apply is located
+: URL of the site where the retentionlabel from a list item to apply is located.
 
 `--listItemId <listItemId>`
 : The ID of the list item for which the retention label should be applied.
 
 `--listId [listId]`
-: ID of the list where the retention label should be applied. Specify either `listTitle`, `listId` or `listUrl`
+: ID of the list where the retention label should be applied. Specify either `listTitle`, `listId` or `listUrl`.
 
 `--listTitle [listTitle]`
-: Title of the list where the retention label should be applied. Specify either `listTitle`, `listId` or `listUrl`
+: Title of the list where the retention label should be applied. Specify either `listTitle`, `listId` or `listUrl`.
 
 `--listUrl [listUrl]`
-: Server- or site-relative URL of the list. Specify either `listTitle`, `listId` or `listUrl`
+: Server- or site-relative URL of the list. Specify either `listTitle`, `listId` or `listUrl`.
 
 `-n, --name [name]`
 : The name of the retention label. Specify either `name` or `id`.
